FT2023-000:Updated PR according to feedback.

--- a/web/themes/custom/sub_theme/scss/base/_variables.scss
+++ b/web/themes/custom/sub_theme/scss/base/_variables.scss
@@ -5,11 +5,13 @@ $header-font: 'Bradley Hand';
 $slider-mid-size: 25px;
 $slider-max-size: 35px;
 $slider-small-size: 20px;
+$paragraph-size: large;
 
 // Slider color palette.
 $slide-text-primary-color:white;
 $slider-arrow-color: rgba(255, 255, 255, 0.5);
 $tag-color: #6e00fe74;
+$time-color: #fe3ceb;
 
 
 // Button default style
