--- a/web/themes/custom/sub_theme/css/style.css
+++ b/web/themes/custom/sub_theme/css/style.css
@@ -2,13 +2,16 @@
   box-sizing: border-box;
   list-style: none;
   margin: 0;
-  padding: 0;
-}
+  padding: 0; }
 
-a,
-a:hover,
-a:active {
+body {
+  padding-top: 0;
+  margin-top: 0; }
+
+.col-sm-12 {
+  padding: 0; }
+
+a, a:hover, a:active {
   color: inherit;
   text-decoration: none;
-  border: none;
-}
+  border: none; }
