--- a/web/themes/custom/sub_theme/scss/base/_base.scss
+++ b/web/themes/custom/sub_theme/scss/base/_base.scss
@@ -5,6 +5,17 @@
   padding: 0;  
 }
 
+body {
+  padding-top: 0;
+  margin-top: 0;
+  // overflow-x: hidden;
+  // overflow-y: hidden;
+}
+
+.col-sm-12{
+  padding: 0;
+}
+
 a,a:hover,a:active{
   color:inherit;
   text-decoration: none;
